use LinkedList explicitly for the tiny gain getFirst() provides over get(0)
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/compress/trunk@1487468 13f79535-47bb-0310-9956-ffa450edef68